# CPP_Labs

./: Abstract_class.cpp  CMakeLists.txt  Composition.cpp  Composition.h  Inheritance.cpp  Observer_pattern.cpp  Operator_overloading.cpp  Operator_overloading.h  Smart_pointers_and_containers.cpp  eeprom.cpp  eeprom.h  extraextra.cpp  function_objects.cpp  function_objects.h  lab11.cpp  main.cpp  new.cpp  string_streams.cpp  using_map_and_pair.cpp  using_reference_parameter.cpp
Lab12/: CMakeLists.txt  ColorObserver.cpp  ColorObserver.h  MenuItem.h  Observable.cpp  Observable.h  ObservableIntEdit.cpp  ObservableIntEdit.h  Observer.cpp  Observer.h  lab12_main.cpp
